--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,11 @@ yarn-error.log*
 
 
 # next.js
-/.next/
-/out/
+**/.next/
+**/out/
 
 # vercel
-.vercel
+**/.vercel
 
 # typescript
 *.tsbuildinfo
