--- a/store-app/samples/Dockerfile.Nextjs
+++ b/store-app/samples/Dockerfile.Nextjs
@@ -1,4 +1,4 @@
-FROM node:18-alpine
+FROM node:alpine as builder
 
 # Set working directory
 WORKDIR /app
@@ -25,3 +25,22 @@ USER node
 
 # Run npm start script when container starts
 CMD [ "npm", "start" ]
+
+
+######################################################
+# Base on offical NGINX Alpine image
+# FROM nginx:alpine
+
+# Remove any existing config files
+# RUN rm /etc/nginx/conf.d/*
+
+# Copy config files
+# *.conf files in conf.d/ dir get included in main config
+# COPY ./default.conf /etc/nginx/conf.d/
+# COPY --from=builder /app/.next /usr/share/nginx/html
+
+# Expose the listening port
+# EXPOSE 80
+
+# Launch NGINX
+# CMD [ "nginx", "-g", "daemon off;" ]
