Step #12. A solution was found to run the frontend application Next.js-13 and the server NGINX  in one container.

--- a/store-app/Dockerfile
+++ b/store-app/Dockerfile
@@ -1,28 +1,18 @@
-FROM node:18-alpine
+FROM node:18-alpine as builder
 
-# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json before other files
-# Utilise Docker cache to save re-installing dependencies if unchanged
 COPY ./package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy all files
 COPY ./ ./
 
-# Build app
 RUN npm run build
 
-# Expose the listening port
-EXPOSE 3000
-EXPOSE 5002
+##############################
+FROM nginx
 
-# Run container as non-root (unprivileged) user
-# The node user is provided in the Node.js Alpine base image
-USER node
+RUN rm -rf /usr/share/nginx/html/*
 
-# Run npm start script when container starts
-CMD [ "npm", "start" ]
+COPY --from=builder /app/out /usr/share/nginx/html
