--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 /coverage
 
 # production
-/build
+**/build
+# next.js
+**/.next/
+**/out/
 
 # misc
 /.vscode
@@ -25,11 +28,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-
-# next.js
-**/.next/
-**/out/
 
 # vercel
 **/.vercel
