--- a/store-app/samples/nginx-config-files/chatgpt4nginx.conf
+++ b/store-app/samples/nginx-config-files/chatgpt4nginx.conf
@@ -1,11 +1,16 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-include /usr/share/nginx/modules/*.conf;
+# chatgpt4
+# i suppuse there are some mistakes
+
+user                    nginx;
+worker_processes        auto;
+error_log               /var/log/nginx/error.log warn;
+pid                     /var/run/nginx.pid;
+include                 /usr/share/nginx/modules/*.conf;
 
 # Define the maximum number of simultaneous connections
-events { worker_connections 1024 }
+events {
+    worker_connections 1024
+}
 
 # Enable logging
 log_format main '$remote_addr - $remote_user [$time_local] "$request" '
