--- a/store-app/samples/dockerfiles/Dockerfile.nextjs-only
+++ b/store-app/samples/dockerfiles/Dockerfile.nextjs-only
@@ -1,4 +1,4 @@
-# A container only with Next.js-13 project
+# A container to run only with Next.js-13 project
 
 # Create from Node.js v18 image
 FROM node:18-alpine
