Step #21. A new `store-app-react` with updated dependensies through package.json and a new `createRoot` hook.

--- a/store-app-react/package.json
+++ b/store-app-react/package.json
@@ -1,17 +1,20 @@
 {
+  "name": "store-app",
+  "version": "0.7.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.8.9",
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@testing-library/react": "^13.4.0",
-    "axios": "^0.27.2",
-    "framer-motion": "^4.1.17",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-modal": "^3.16.1",
-    "react-scripts": "5.0.1"
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.15.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
