Step #22. Results of testing the devepolment manifests with `kubectl apply -f k8s-4dev`.

--- a/k8s-4dev/store-pod.yaml
+++ b/k8s-4dev/store-pod.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
     - name: store
-      image: azrubael/mern5shop:nextjs
+      image: azrubael/mern5shop:reactnginx7
       ports:
-        - containerPort: 3000
+        - containerPort: 80
