--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@
 /.worklogs
 .env
 .env*.local
-.env.development.local
+.env.development.*
 .env.test.local
-.env.production.local
+.env.production.*
 .DS_Store
 *.pem
 
