--- a/store-app-nextjs/package.json
+++ b/store-app-nextjs/package.json
@@ -20,6 +20,9 @@
     "react-icons": "^4.2.0",
     "react-modal": "^3.15.1"
   },
+    "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
+  },
   "keywords": [
     "react.js",
     "next.js",
