--- a/k8s/notifications-api-deployment.yaml
+++ b/k8s/notifications-api-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: notifications-api
-          image: laithharb/notifications-api
+          # image: laithharb/notifications-api
+          image: azrubael/mern5shop:nodemq1
           ports:
             - containerPort: 5001
