--- a/k8s/products-api-deployment.yaml
+++ b/k8s/products-api-deployment.yaml
@@ -14,6 +14,31 @@ spec:
     spec:
       containers:
         - name: products-api
-          image: laithharb/products-api
+          # image: laithharb/products-api
+          image: azrubael/mern5shop:nodedb7env
           ports:
             - containerPort: 5002
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: reports-secret
+                  key: MONGO_INITDB_ROOT_USERNAME  
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: reports-secret
+                  key: MONGO_INITDB_ROOT_PASSWORD 
+            - name: QUSR
+              valueFrom:
+                secretKeyRef:
+                  name: reports-secret
+                  key: QUSR 
+            - name: QPWD
+              valueFrom:
+                secretKeyRef:
+                  name: reports-secret
+                  key: QPWD
+          envFrom:
+            - configMapRef:
+                name: rabbitmq-configmap
