--- a/reports-api/Dockerfile
+++ b/reports-api/Dockerfile
@@ -2,11 +2,11 @@ FROM python:alpine
 
 WORKDIR /app
 
-RUN pip install python-decouple && \
-pip install pika
+# RUN pip install python-decouple
+RUN pip install pika
 
 COPY reports.py .
-COPY .env .
+# COPY .env .
 
 EXPOSE 5001 465
 CMD python3 reports.py
