Step #27. Ingress NGINX. There is some controversy due to updates in the latest kubernetes.

--- a/k8s/products-api-deployment.yaml
+++ b/k8s/products-api-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: products-api
-          # image: laithharb/products-api
-          image: azrubael/mern5shop:nodedb7env
+          image: laithharb/products-api
+          # image: azrubael/mern5shop:nodedb7env
           ports:
             - containerPort: 5002
           env:
