--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -12,14 +12,16 @@ spec:
     - http:
         paths:
           - path: /?(.*)
-            pathType: Prefix
+            # pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: store-cluster-ip-service
                 port:
                   number: 80
           - path: /api/?(.*)
-            pathType: Prefix
+            # pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: products-api-cluster-ip-service
