--- a/k8s/store-deployment.yaml
+++ b/k8s/store-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: store
-          image: laithharb/store-app
+          # image: laithharb/store-app
+          image: azrubael/mern5shop:reactnginx7
           ports:
             - containerPort: 80
