--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -9,7 +9,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
+    - host: <...>.elb.us-east-1.amazonaws.com
+      http:
         paths:
           - path: /?(.*)
             # pathType: Prefix
