--- a/k8s/mongodb-deployment.yaml
+++ b/k8s/mongodb-deployment.yaml
@@ -17,10 +17,10 @@ spec:
           image: mongo
           ports:
             - containerPort: 27017
-      #     volumeMounts:
-      #       - name: mongodb-storage
-      #         mountPath: /data/db
-      # volumes:
-      #   - name: mongodb-storage
-      #     persistentVolumeClaim:
-      #       claimName: mongodb-persistent-volume-claim
+          volumeMounts:
+            - name: mongodb-storage
+              mountPath: /data/db
+      volumes:
+        - name: mongodb-storage
+          persistentVolumeClaim:
+            claimName: mongodb-persistent-volume-claim
